--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="/src/clicker.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/src/dark-mode.css">
   <title>Craig's Hopefully Someday DYNAMIC Clicker☕️💥</title>
 </head>
-
 <body>
   <div class="column-container">
     <div class="column">
       <div class="container left">
-        <div class="counter-container">Grin: <span id="coffee_counter">0</span></div>
-        <div class="cps-container"><span id="cps">0</span> grins/second</div>
-        <div id="big_coffee">😀</div>
+        <div class="counter-container">Emoji: <span id="coffee_counter">0</span></div>
+        <div class="cps-container"><span id="cps">0</span> emojis per second</div>
+        <div id="big_coffee"><img src="https://em-content.zobj.net/thumbs/120/google/350/octopus_1f419.png"/></div>
       </div>
     </div>
     <div class="column">
@@ -24,5 +24,6 @@
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
-
 </html>
+
+
